[build-system]
build-backend = "pdm.builders.api"
requires = ["pdm"]

[tool]
[tool.pdm]
author = "Nasy <nasyxx+python@gmail.com>"
description = "Nasy IPython Extensions."
homepage = "https://github.com/nasyxx/naipyext"
license = "GPL-v3"
name = "naipyext"
python_requires = ">=3.7"
version = "0.6.0"
include = ["README.md"]
extras = ["be", "ns", "other", "all"]
[tool.pdm.dependencies]
ipython = "*"

[tool.pdm.dev-dependencies]

[tool.pdm.be-dependencies]
better_exceptions = "*"

[tool.pdm.ns-dependencies]
httpx = "*"
numpy = "*"
pandas = "*"
pdir2 = "*"
tqdm = "*"

[tool.pdm.other-dependencies]
httpx = "*"
jupyter_qtconsole_colorschemes = "*"
pendulum = "*"
ptpython = "*"
rich = "*"
sympy = "*"

[tool.pdm.all-dependencies]
better_exceptions = "*"
httpx = "*"
jupyter_qtconsole_colorschemes = "*"
numpy = "*"
pandas = "*"
pdir2 = "*"
pendulum = "*"
ptpython = "*"
rich = "*"
sympy = "*"
tqdm = "*"
