[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
author = "Nasy <nasyxx+python@gmail.com>"
description = "Nasy IPython Extensions."
homepage = "https://github.com/nasyxx/naipyext"
license = "GPL-v3"
name = "naipyext"
python_requires = ">=3.7"
version = "0.7.0"
include = ["README.md"]
extras = ["be", "ns", "other", "all"]
[tool.pdm.dependencies]
ipython = "*"

[tool.pdm.dev-dependencies]

[tool.pdm.be-dependencies]
better_exceptions = "*"

[tool.pdm.ns-dependencies]
httpx = "*"
numpy = "*"
pandas = "*"
pdir2 = "*"
tqdm = "*"

[tool.pdm.other-dependencies]
httpx = "*"
jupyter_qtconsole_colorschemes = "*"
pendulum = "*"
ptpython = "*"
rich = "*"
sympy = "*"

[tool.pdm.all-dependencies]
better_exceptions = "*"
httpx = "*"
jupyter_qtconsole_colorschemes = "*"
numpy = "*"
pandas = "*"
pdir2 = "*"
pendulum = "*"
ptpython = "*"
rich = "*"
sympy = "*"
tqdm = "*"

[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
authors = [
    {name = "Nasy", email = "nasyxx+python@gmail.com"},
]
version = "0.7.0"
dynamic = ["classifiers"]
requires-python = ">=3.7"
license = {text = "GPL-v3"}
dependencies = [
    "ipython",
]
dev-dependencies = []
description = "Nasy IPython Extensions."
name = "naipyext"
include = ["README.md"]

[project.urls]
homepage = "https://github.com/nasyxx/naipyext"

[project.optional-dependencies]
be = ["better-exceptions"]
ns = ["httpx", "numpy", "pandas", "pdir2", "tqdm"]
other = ["httpx", "jupyter-qtconsole-colorschemes", "pendulum", "ptpython", "rich", "sympy"]
all = ["better-exceptions", "httpx", "jupyter-qtconsole-colorschemes", "numpy", "pandas", "pdir2", "pendulum", "ptpython", "rich", "sympy", "tqdm"]
